@@ -1,3 +1,7 @@
+2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>
+      scripts/openjump.sh:
+      Using $JAVA_HOME if it's set.
+
 2008-02-14 Andreas Schmitz <schmitz@lat-lon.de>
       src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
       Added SLD-Export of SVG images.
